
option optimize_for = SPEED;

// Serialization test messages
message MsgPion {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;  
  extensions 5;
}

message EmptyMessage {
}

// Encoding test messages
message SimpleTest
{
    required string name = 2;
}

message CompositeStringTest
{
    repeated SimpleTest test = 1;
}

message CompositeIntegerTest
{
    repeated int32 test = 1;
}

message ZeroField
{
    optional int32 value = 1 [default = 0];
}

message Composite
{
    required int32 context = 1;
    optional SimpleTest simple = 2;
    optional ZeroField zero = 3;
}

message Extendable
{
    extensions 1 to max;
}

extend Extendable
{
    optional SimpleTest simple = 1;
    optional ZeroField zero = 2;
}
